--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100%;
+}
+.app_header {
+  background: linear-gradient(180deg, rgba(162,162,162,1) 0%, rgba(229,229,229,1) 58%);
+  font-size: 40px;
+  color: #fff;
+  max-width: 1200px;
+  width: 100%;
+}
+.main {
+  background: #E5E5E5;
+  padding: 50px;
+  max-width: 1200px;
+  box-sizing: border-box;
+}
+.cards_content{
+  max-width: 1200px ;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  row-gap: 25px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
